modules/nixos/k3s/rpi5-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpi5-hosts-ingress       # 可以改名，也可保留原名
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: samba.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: qbittorrent.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: syncthing.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: homeassistant.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: atuin.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: ariang.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: amule.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
  - host: matrix.ts.wenjin.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi5-nginx-service
            port:
              number: 8000
